package Modelo;

public class Categoria {
    private String nombre;
    private Integer kilometrosLimite;
}
