package Modelo;

public class Fotografia {
    private String descripcion;
    private String ruta;
}

