package Modelo;

public class Marca { //OBJECT
    private String nombre;
}
