package Modelo;

public class Modelo {
    private String nombre;
}
