package Modelo;

import java.util.List;

public class Moto {
    private Marca marca;
    private Modelo modelo;
    private Integer patente;
    private List<Fotografia>fotografias;
}
