package Modelo;

public class Motoquero {
    private String nombre;
    private Categoria categoriaPerteneciente;
    private Integer kmRecorridos;
}
