package Modelo;

public enum NivelDificultad {
    PRINCIPIANTE,
    INTERMEDIO,
    AVANZADO,
    EXTREMO
}
