package Modelo;

import java.util.List;

public class PuntoInteres {
    private String nombrePunto;
    private TipoPuntoInteres tipo;
    private String descripcion;
    private Integer ubicacionGeografica;
    private List<Fotografia> fotografias;
}
