package Modelo;

public class TipoPuntoInteres {
    private String nombrePunto;

}
