package Modelo;

public enum TipoTerreno {
    ASFALTO,
    RIPIO,
    MIXTO
}
